name:     vector-rope
version:  0.1.0
category: Data, Data Structures
synopsis: Vectors with efficient appends and updates

maintainer:   Ertugrul Söylemez <esz@posteo.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2016 Ertugrul Söylemez
homepage:     https://github.com/esoeylemez/vector-rope
bug-reports:  https://github.com/esoeylemez/vector-rope/issues
license:      BSD3
license-file: LICENSE

description: This package provides an implementation of ropes with
    vector chunks, so operations like appending and random updates
    become efficient.  This is often a good functional replacement for
    mutable vectors.

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: CHANGELOG.md README.md

source-repository head
    type:     git
    location: https://github.com/esoeylemez/vector-rope.git


library
    build-depends:
        base >= 4.8 && < 4.10,
        fingertree == 0.1.*,
        primitive == 0.6.*,
        vector >= 0.11 && < 0.13
    default-language: Haskell2010
    ghc-options: -W
    hs-source-dirs: src
    exposed-modules:
        Data.Vector.Rope
        Data.Vector.Rope.Core
        Data.Vector.Rope.Measure

test-suite tests
    type: exitcode-stdio-1.0
    build-depends:
        base >= 4.8 && < 4.10,
        fingertree,
        QuickCheck,
        tasty,
        tasty-quickcheck,
        vector,
        vector-rope
    default-language: Haskell2010
    ghc-options: -W -threaded -with-rtsopts=-N
    hs-source-dirs: tests
    main-is: Props.hs
    other-modules:
        Props.EqOrd
        RopeGen
